게시글 필터링 수정(공개범위)